# Affliction

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  VulkanExpermient.sln  helloworld.cpp
VulkanExperiment/: CMakeLists.txt
VulkanExperiment/include/VulkanExperiment/: experiment.h  experiment.hpp  graphics.hpp  logging.hpp  vke.hpp
VulkanExperiment/include/VulkanExperiment/platform/: application.h
VulkanExperiment/src/: experiment.cpp  logging.cpp
VulkanExpermient/: VulkanExpermient.vcxproj  main.cpp
VulkanExpermient/shaders/: helloworld.frag.spv  helloworld.vert.spv
Werld/: CMakeLists.txt
Werld/src/: main.cpp
cmake/: UseDoxygenDoc.cmake
docs/: Doxyfile.in  front_page.md
